Fixed navigation alignment

--- a/scss/sections/_navigation.scss
+++ b/scss/sections/_navigation.scss
@@ -4,7 +4,6 @@
 }
 
 .navigation{
-    left: 0;
     background-color: $theme-light-bg-color;
     justify-content: flex-end;
     text-align: right;
